<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsSectionGeneral"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.duckduckgo.common.ui.view.divider.HorizontalDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.duckduckgo.common.ui.view.listitem.SectionHeaderListItem
        android:id="@+id/settingsSettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsHeadingSettings" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/generalSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsGeneral" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/autofillLoginsSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsAutofillLoginsSetting" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/syncSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsSyncSetting" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/homeScreenWidgetSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsAddHomeScreenWidget" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/fireButtonSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsFireButton" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/permissionsSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsPermissionsSetting" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/appearanceSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsHeadingAppearance" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/accessibilitySetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsAccessibility" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/aboutSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsHeadingAbout" />

</LinearLayout>