<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsSectionOther"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.duckduckgo.common.ui.view.divider.HorizontalDivider
        android:id="@+id/settingsOtherDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.duckduckgo.common.ui.view.listitem.SectionHeaderListItem
        android:id="@+id/settingsOtherTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsHeadingMore" />

    <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
        android:id="@+id/macOsSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/macos_settings_title"
        app:primaryTextTruncated="false"
        app:secondaryText="@string/macos_settings_description" />

    <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
        android:id="@+id/windowsSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/windows_settings_title"
        app:primaryTextTruncated="false"
        app:secondaryText="@string/windows_settings_description" />

</LinearLayout>
