<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsSectionAbout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.duckduckgo.common.ui.view.divider.HorizontalDivider
        android:id="@+id/settingsSectionMoreBottomDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.duckduckgo.common.ui.view.listitem.SectionHeaderListItem
        android:id="@+id/settingsAboutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsHeadingAbout" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsAboutDuckduckgo" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/privacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsPrivacyPolicyDuckduckgo" />

    <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/settingsVersion"
        tools:secondaryText="123.43.5456" />

    <com.duckduckgo.common.ui.view.listitem.OneLineListItem
        android:id="@+id/provideFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/leaveFeedback" />

</LinearLayout>